# job-queue

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: dashboard.rs  handlers.rs  main.rs
jobs/: Cargo.toml
jobs/src/: lib.rs  notification.rs  order.rs  payment.rs
migrations/: 001_init.sql
queue/: Cargo.toml
queue/src/: job.rs  lib.rs  retry.rs  scheduler.rs  store.rs
worker/: Cargo.toml
worker/src/: executor.rs  heartbeat.rs  lib.rs  pool.rs
